--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     // TSのモジュールはES Modulesとして出力
     "module": "es2015",
     // JSXの書式を有効に設定
-    "jsx": "react",
+    "jsx": "react-jsx",
     "moduleResolution": "node",
     "lib": ["es2020", "dom"],
     "baseUrl": ".",
