--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "es2015",
     // JSXの書式を有効に設定
     "jsx": "react-jsx",
+    "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "lib": ["es2020", "dom"],
     "baseUrl": ".",
