--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,15 @@
 {
-  "extends": [
-    "config:base"
+  "extends": ["config:base"],
+  "timezone": "Asia/Tokyo",
+  "baseBranches": ["develop"],
+  "schedule": ["every weekend"],
+  "labels": ["renovate"],
+  "automerge": true,
+  "patch": { "automerge": true },
+  "packageRules": [
+    {
+      "depTypeList": ["devDependencies"],
+      "automerge": true
+    }
   ]
 }
